--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="assests/PokeApi.png" class="header-image">
+			<h1 class="poke1">C</h1>
         </div>
-        <h1>Generador de Pokémon</h1>
+        <h1 class="poke-logo">Generador de Pokémon</h1>
         <form id="pokemonForm">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" required>
