--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Pokémon Generator</title>
+  <title>PokeApi</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="assets/logo.webp>
   <script defer src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
